login fixata, occorre effettuare la richiesta con task